Move Java formatting and some dependencies to the root pom.xml.
This is in preparation for a database module that has Java code.